updated to have another escape character, starting building codeArea for subject